orcid-web/src/main/webapp/static/css/orcid.new.css
/* ... */
.public-profile .workspace-section .workspace-section-header .inline-list .right .popover.top>.arrow {
    left: 56px;
}

.form-social-sign-in h2 {
    margin-bottom: 35px;
}

.form-social-sign-in hr {
    margin-top: 5px;
}

.edit-external-identifiers .aka p {
    margin-bottom: 0;
}

#colorbox,
#cboxOverlay,
#cboxWrapper {
    overflow: visible;
    /* Deal with it only for Modal v2*/
}

.edit-record-emails .popover-help-container {
    position: absolute;
}

.notification-alert {
    margin-top: 15px;
    border-color: #F5C120;
    background-color: #F5C120;
    color: #494A4C;
    border-radius: 0;
    min-height: 50px;
    height: auto;
    padding: 15px;
    overflow: hidden;
    margin-bottom: 15px;
}

.notification-alert-title {
    float: none;
    color: #494A4C;
    padding-bottom: 10px;
}

.notification-alert .action-buttons {
    width: 100%;
    height: 30px;
}

.member-list [class*="col"] {
    padding-left: 10px;
}

.member-list h1 a,
.member-list h1 a:visited,
.member-list h2 a,
.member-list h2 a:visited {
    color: #a6ce39;
    text-decoration: none;
}

.member-list h1 a:hover,
.member-list h1 a:active,
.member-list h2 a:hover,
.member-list h2 a:active {
    color: #338caf;
    text-decoration: none;
}

.member-list .member-logo {
    width: auto;
    height: auto;
    max-width: 100px;
    max-height: 100px;
    float: left;
    margin: 0 10px 0 0;
}

.member-list h3 {
    color: #a6ce39;
    margin-top: 0;
}

.member-list ul {
    padding: 0;
    margin: 0 0 16px 0;
}

.member-list a {
    white-space: nowrap;
}

.member-list table a {
    white-space: normal;
    word-break: normal;
}

.member-list td,
.member-list th {
    width: 33%;
}

.member-list tr {
    border-bottom: 1px solid #eee;
}

.member-list td,
.member-list th {
    vertical-align: top;
    padding: 10px 10px 10px 0;
}

.member-list .selected {
    color: #a6ce39;
}

.member-list select {
    margin: 0;
}

.member-list .btn-primary {
    height: 30px;
    background: #338caf;
    border: #338caf;
}

.member-list .btn-primary:hover,
.member-list .btn-primary:active {
    background: #a6ce39;
    border: #a6ce39;
}

.member-list a {
    padding: 2px 4px;
}

.member-list .active a {
    color: #fff;
    background: #338caf;
    border-radius: 2px;
}

.member-list .filter li {
    display: inline;
    padding: 3px;
}

.member-list ul.filter {
    list-style-type: none;
    margin: 6px 0;
}

.small-element {
    width: 5% !important;
}

.middle {
    vertical-align: middle;
}


/* Bulk edit bio*/

.bio-edit-modal {
    margin-right: 30px;
    width: 100%;
}

.edit-record .custom-control-title {
    text-transform: uppercase;
    display: block;
    font-size: 12px;
}

.confirm-revoke-access-modal {
    max-width: 600px;
    padding-top: 15px;
}

.account-settings .pull-right {
    margin-right: 16px;
}

.wizard-header {
    font-size: 31px;
}

.reset-width {
    width: auto !important;
    min-width: 0 !important;
    display: table !important;
}

#bio-section .popover {
    top: -40px;
    left: -4px;
    display: none;
}

#bio-section .popover .arrow {
    left: 56px;
}

#bio-section .edit-biography:hover .popover {
    display: block;
}

#register p,
#register .dark-label {
    color: #494A4C;
}

.peer-review-delete {
    display: inline;
    position: relative;
    color: #337ab7;
}

.peer-review-delete:hover {
    color: #a6ce39;
    cursor: pointer;
}

.peer-review-delete .popover-tooltip {
    display: none;
    color: #939598;
}

.peer-review-delete .popover-tooltip .arrow {
    left: 63px;
}

.peer-review-delete:hover .popover-tooltip {
    display: block;
    color: #939598;
    top: -42px;
    left: -48px;
    cursor: default;
}

.edit-record .popover-tooltip {
    display: none;
}

.edit-record .popover {
    border: 1px solid #ccc;
    box-shadow: none;
}

.edit-record .popover .arrow {
    border-top-color: #ccc;
    background: none;
}

.edit-record a span.glyphicon-plus:hover .popover-tooltip-add {
    display: block;
    top: -40px;
    left: -16px;
}

.edit-record a span.glyphicon-plus .popover-tooltip-add .arrow {
    left: 28px;
}

.edit-record a span.glyphicon-plus:hover .popover-tooltip-add .popover-content span {
    color: #494a4c;
}

.tooltip-container a.glyphicon-trash .popover-tooltip {
    display: none;
    min-width: 30px;
    top: -43px;
    left: -27px;
}

.tooltip-container a.glyphicon-trash:hover .popover-tooltip {
    display: block;
    cursor: normal;
    color: #494a4c;
}

.tooltip-container a.glyphicon-trash:hover .arrow {
    left: 34px;
}

.settings-table #name-help.popover {
    left: -127px;
    top: 17px;
}

.edit-record .record-settings .popover-help-container,
.edit-record .bulk-privacy-bar .popover-help-container {
    position: absolute;
    width: 100%;
}

.edit-record .bulk-edit-modal #privacy-bar {
    float: right;
    margin-right: 35px;
    clear: both;
}

.fixed-area .col-md-12.padding-right-reset {
    padding-right: 30px;
    margin-top: 15px;
    text-transform: uppercase;
    font-size: 12px;
}

.bulk-edit-modal .bulk-help {
    float: right;
    margin-right: 5px;
    position: relative;
}

.bulk-edit-modal #bulk-help {
    left: -180px;
    width: 300px;
}

.bulk-edit-modal #bulk-help .arrow {
    left: 187px;
}

#social-login-help,
#institution-login-help {
    left: -115px;
}

#qrcode-help {
    left: -113px;
}

#qrcode-help .arrow {
    left: 119px;
}

#ul li.bio-edit {
    display: inline-block;
    vertical-align: top;
}

.no-bulk-margin-fix {
    margin-top: 30px;
}

.one-per-line {
    height: 60px;
}

/* Deprecate account */
.confirm-deprecate-account-modal,
.deprecate-account-confirmation-modal{
    /*matches .confirm-revoke-access-modal */
    max-width: 600px;
    padding-top: 15px;
}

.cancel-right {
    margin-left: 15px;
}

.confirm-deprecate-account-modal .inline,
.confirm-deprecate-account-modal .inline li {
    display: inline;
    padding: 0;
    margin: 0;
}

ul.comma li:after {
    content: ", ";
}
/* ... */

